src/test/ui/issues/issue-21146.stderr
error: expected item, found `parse_error`
  --> $DIR/auxiliary/issue-21146-inc.rs:3:1
   |
LL | parse_error
   | ^^^^^^^^^^^

error: aborting due to previous error

