src/test/ui/issues/issue-21146.rs
// error-pattern: expected item, found `parse_error`
include!("auxiliary/issue-21146-inc.rs");
fn main() {}
